syslog-ng (3.4.0~alpha3+sandbox+133-1~mhp2) unstable; urgency=low

  * Update build-depends: added automake (>= 1.11.1) and python.
  * Tighten the dependency of the modules on syslog-ng-core.

 -- Gergely Nagy <algernon@madhouse-project.org>  Tue, 16 Oct 2012 13:04:48 +0200

syslog-ng (3.4.0~alpha3+sandbox+133-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * New upstream snapshot release from my sandbox/3.4 branch, git commit
    9e7b3425df928c29b9bd2d03bb3099056baf2194.
  * Drop the libsyslog-ng package, fold it into syslog-ng-core, and rename
    libsyslog-ng-dev to syslog-ng-dev.
    + libsyslog-ng.so is installed into a private directory.

 -- Gergely Nagy <algernon@madhouse-project.org>  Mon, 15 Oct 2012 23:45:39 +0200

syslog-ng (3.3.6.91-1~mhp1) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Packaging synced with GCS.
  * New upstream release candidate + patches
    (based on git commit 768073c667a04f64fdc75ec17aed62f60c12da75)
  * Don't mark systemd symlinks in /etc as conffiles
    (Closes: #690067)

 -- Gergely Nagy <algernon@madhouse-project.org>  Sun, 14 Oct 2012 13:14:53 +0200

syslog-ng (3.3.6-1) unstable; urgency=low

  * New upstream release:
    - fixes disconnect on charset decoding error when using UDP sources
      (closes: #674099),
    - use upstream, packaged ivykis.
  * Backport upstream fix of cfg-lexer to fix glob-based include order.

  [ Gergely Nagy <algernon@madhouse-project.org> ]
  * Add NEWS.Debian, with a note about OpenSSL changing the default dir
    hashing from MD5 to SHA1, and its effect on syslog-ng users.
  * Fix build-indep and multiple builds in a row
  * Explicitly remove systemd unit and service files from /etc upon purge
    (closes: #674020).

 -- Laszlo Boszormenyi (GCS) <gcs@debian.hu>  Wed, 05 Sep 2012 01:57:50 +0200

syslog-ng (3.3.5-2) unstable; urgency=low

  [ Gergely Nagy <algernon@madhouse-project.org> ]