@@ -181,11 +181,12 @@ override_dh_installlogcheck:
 # dh_makeshlibs wants to be clever and treat plugins as shared libs.
 # Slap it in the face, and tell it not to. We also do not need any
 # script modifications, as our single shared lib is in a private
-# directory.
-override_dh_makeshilbs: PKG_VERSION := $(shell dpkg-parsechangelog | grep '^Version:' | cut -d: -f2)
+# directory. On the other hand, we do want correct dependencies on
+# anything that build-depends on syslog-ng-dev, so lets make a correct
+# shlibs file for that, shall we?
 override_dh_makeshlibs:
-ifeq (,$(filter syslog-ng-core,$(shell dh_listpackages)))
-	dh_makeshlibs -V "syslog-ng-core (= ${PKG_VERSION})" -n -Xusr/lib/syslog-ng/$(shell cat ${SRCDIR}/VERSION)
+ifeq (,$(filter syslog-ng-dev,$(shell dh_listpackages)))
+	dh_makeshlibs -V "syslog-ng-core (= $(shell dpkg-parsechangelog | grep '^Version:' | cut -d: -f2))" -n -Xusr/lib/syslog-ng/$(shell cat ${SRCDIR}/VERSION)
 else
 	dh_makeshlibs -n -Xusr/lib/syslog-ng/$(shell cat ${SRCDIR}/VERSION)
 endif
